<resources>
    <string name="app_name">Fisher_Hanbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_text_size_array">Размер главного текста</string>

    <string name="som">Сом</string>
    <string name="fish">Рыба</string>
    <string name="naj">Нажинка</string>
    <string name="sna">Снасти</string>
    <string name="prikormka">Прикормка</string>
    <string name="history">Рыбацкие истории</string>
    <string name="advice">Полезные советы</string>
    <string name="fish_3">Обыкнове́нный сом[1], или европе́йский сом[1] (лат. Silurus glanis) — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).

Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4]. Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6]. Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.

Окрас в большинстве случаев бурый с оттенками коричнево-зелёного, брюхо белое. В зависимости от мест обитания окрас может меняться от почти чёрного до светло-жёлтого. Иногда, очень редко, встречаются сомы альбиносы.

Обитает в реках и озёрах Европы и Европейской части России, кроме бассейна Ледовитого океана. Обычен в Европе и в бассейне Аральского моря.

Икрометание весной в прибрежной зоне среди водной растительности. Самка откладывает икру в гнездо, которое самец охраняет. Половозрелость обычно на пятом году жизни. Активный ночной хищник. Днём предпочитает отлёживаться на ямах, в коряжнике и прочих «крепких местах».

Перед ледоставом собирается на ямах в небольшие группы от 5 до 10 особей. Зимой не питается и практически неактивен.

Описаны случаи нападения крупных особей на людей, особенно детей[4][7]. В XVI—XVIII веках неоднократно фиксировались случаи поимки гигантских сомов в Дунае, в желудках которых находили человеческие тела или их части, при этом, однако, неясно, становились ли погибшие жертвами рыб при жизни, или же последние употребляли в пищу их трупы[8].

В Волге можно встретить особей, масса тела которых достигает около 50 кг[9]. Наиболее крупные сомы (массой более 100 кг) иногда вылавливаются рыбаками в Испании, в р. Эбро, где они были акклиматизированы в середине XX века и быстро размножились[2].

В Латвии официальный рекордом считается сом весом в 84 килограмма, выловленный в Даугаве в 2010 году. В 2018 году, тоже на реке Даугава был пойман сом весом в 100 килограмм и длиной в 2,45 метра, но он по латвийским правилам улов пойманный мережей не может засчитываться. По той же причине не был засчитан и 86 килограммовый сом вытащенный там же в 2017 году.[10]

Во многих регионах распространён способ ловли сома на квок.

Сома издавна употребляли в пищу, преимущественно в жареном виде, хотя В. И. Даль в книге «О поверьях, суевериях и предрассудках русского народа» (1845—1846) утверждал, что крестьяне южнорусских губерний и донские казаки его мясом брезговали, называя «чёртовым конём», используя лишь жирный хвост в качестве начинки для пирогов[11].</string>
    <string name="fish_1">Ryba 1</string>
    <string name="fish_2">Ryba 2</string>
    <string name="fish_4">Ryba 4</string>
    <string name="fish_5">Ryba 5</string>

    <string name="na_1">Наживка 1</string>
    <string name="na_2">Наживка 2</string>
    <string name="na_3">Наживка 3</string>
    <string name="na_4">Наживка 4</string>
</resources>
